--- a/visualize_atteniton_map.ipynb
+++ b/visualize_atteniton_map.ipynb
@@ -221,51 +221,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pass image through ViT model"
+    "Pass image through ViT model\n",
+    "\n",
+    "Here’s a line-by-line breakdown of this code snippet, which visualizes attention maps for a Vision Transformer (ViT) model:\n",
+    "\n",
+    "1. **`logits, att_mat = model(x.unsqueeze(0))`**\n",
+    "   - The `model` processes the input `x` (an image or a tensor representing an image), which is first expanded to a batch of size 1 using `x.unsqueeze(0)`.\n",
+    "   - The output `logits` contains predictions, while `att_mat` contains the attention weights for each layer and head.\n",
+    "\n",
+    "2. **`att_mat = torch.mean(att_mat, dim=1)`**\n",
+    "   - Averages attention weights across all heads in each layer. This step simplifies the attention representation to make it more interpretable, resulting in a shape `(num_layers, seq_length, seq_length)`.\n",
+    "\n",
+    "3. **`residual_att = torch.eye(att_mat.size(1))`**\n",
+    "   - Creates an identity matrix the size of the sequence length (`seq_length x seq_length`). This matrix simulates residual connections, where each token attends to itself directly.\n",
+    "\n",
+    "4. **`aug_att_mat = att_mat + residual_att`**\n",
+    "   - Adds the identity matrix to `att_mat`, introducing self-attention for each token.\n",
+    "\n",
+    "5. **`aug_att_mat = aug_att_mat / aug_att_mat.sum(dim=-1).unsqueeze(-1)`**\n",
+    "   - Normalizes each attention matrix along the last dimension (summing to 1 across each row), ensuring the attention scores are correctly scaled for each token.\n",
+    "\n",
+    "6. **`joint_attentions = torch.zeros(aug_att_mat.size())`**\n",
+    "   - Initializes `joint_attentions` to store cumulative attention weights across layers, which will later show how much each input token affects each output token across layers.\n",
+    "\n",
+    "7. **`joint_attentions[0] = aug_att_mat[0]`**\n",
+    "   - Sets the first layer’s joint attention weights as the initial value in `joint_attentions`.\n",
+    "\n",
+    "8. **`for n in range(1, aug_att_mat.size(0)):`**\n",
+    "   - Starts a loop to compute cumulative attention matrices for each layer, which compound layer-by-layer attention across the network.\n",
+    "\n",
+    "9.  **`joint_attentions[n] = torch.matmul(aug_att_mat[n], joint_attentions[n-1])`**\n",
+    "    - Recursively multiplies each layer’s augmented attention matrix with the joint attention matrix from the previous layer, effectively combining the attention maps from all layers up to layer `n`.\n",
+    "\n",
+    "10. **`v = joint_attentions[-1]`**\n",
+    "    - Sets `v` to the final joint attention map. This contains the cumulative attention from the output token to the input tokens, allowing us to understand the overall attention.\n",
+    "\n",
+    "11. **`grid_size = int(np.sqrt(aug_att_mat.size(-1)))`**\n",
+    "    - Computes the grid size based on the sequence length. For image patches, this is typically the square root of `seq_length` (assuming the tokens form a square grid).\n",
+    "\n",
+    "12. **`mask = v[0, 1:].reshape(grid_size, grid_size).detach().numpy()`**\n",
+    "    - Reshapes the attention map (excluding the `[CLS]` token at position 0) to a 2D grid. This map represents the influence of each patch on the final prediction.\n",
+    "\n",
+    "13. **`mask = cv2.resize(mask / mask.max(), im.size)[..., np.newaxis]`**\n",
+    "    - Normalizes the mask to range from 0 to 1, resizes it to the original image’s size, and adds an extra channel dimension for compatibility with RGB images.\n",
+    "\n",
+    "14. **`result = (mask * im).astype(\"uint8\")`**\n",
+    "    - Multiplies the normalized mask with the original image to create a visualization where more attended regions appear brighter, and converts the result to an 8-bit image format for display."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.2379,  2.3441,  0.1502, -1.1114, -0.8891, -1.0353, -0.3303, -0.3085,\n",
-      "         -1.1623,  1.3552]], grad_fn=<AddmmBackward0>)\n",
-      "torch.Size([6, 4, 65, 65])\n"
+      "Original attention weight shape: torch.Size([6, 4, 65, 65])\n",
+      "Average attention weight shape: torch.Size([6, 65, 65])\n",
+      "Augument attention weight shape: torch.Size([6, 65, 65])\n",
+      "Joint attention weight shape: torch.Size([6, 65, 65])\n",
+      "Output weight shape: torch.Size([65, 65])\n",
+      "Grid size: 8\n",
+      "Patch-wise attention shape: (8, 8)\n",
+      "Resized patch-wise attention shape: (32, 32, 1)\n",
+      "Original image shape: (32, 32, 3)\n",
+      "Attention weighted image shape: (32, 32, 3)\n"
      ]
     }
    ],
    "source": [
     "logits, att_mat = model(image.unsqueeze(0))\n",
-    "print(logits)\n",
-    "print(att_mat.shape)\n",
+    "print(f\"Original attention weight shape: {att_mat.shape}\")\n",
     "\n",
     "# Average the attention weights across all heads.\n",
     "att_mat = torch.mean(att_mat, dim=1)\n",
+    "print(f\"Average attention weight shape: {att_mat.shape}\")\n",
     "\n",
     "# To account for residual connections, we add an identity matrix to the\n",
     "# attention matrix and re-normalize the weights.\n",
     "residual_att = torch.eye(att_mat.size(1))\n",
     "aug_att_mat = att_mat + residual_att\n",
     "aug_att_mat = aug_att_mat / aug_att_mat.sum(dim=-1).unsqueeze(-1)\n",
+    "print(f\"Augument attention weight shape: {aug_att_mat.shape}\")\n",
     "\n",
     "# Recursively multiply the weight matrices\n",
     "joint_attentions = torch.zeros(aug_att_mat.size())\n",
-    "joint_attentions[0] = aug_att_mat[0]\n",
+    "joint_attentions[0] = aug_att_mat[0] # V\n",
+    "print(f\"Joint attention weight shape: {joint_attentions.shape}\")\n",
     "\n",
     "for n in range(1, aug_att_mat.size(0)):\n",
-    "    joint_attentions[n] = torch.matmul(aug_att_mat[n], joint_attentions[n-1])\n",
+    "    joint_attentions[n] = torch.matmul(aug_att_mat[n], joint_attentions[n-1]) # QK^T * V\n",
     "    \n",
     "# Attention from the output token to the input space.\n",
     "v = joint_attentions[-1]\n",
+    "print(f\"Output weight shape: {v.shape}\")\n",
     "grid_size = int(np.sqrt(aug_att_mat.size(-1)))\n",
+    "print(f\"Grid size: {grid_size}\")\n",
     "mask = v[0, 1:].reshape(grid_size, grid_size).detach().numpy()\n",
+    "print(f\"Patch-wise attention shape: {mask.shape}\")\n",
     "mask = cv2.resize(mask / mask.max(), (img.shape[0], img.shape[1]))[..., np.newaxis]\n",
-    "result = (mask * img)"
+    "print(f\"Resized patch-wise attention shape: {mask.shape}\")\n",
+    "result = (mask * img)\n",
+    "print(f\"Original image shape: {img.shape}\")\n",
+    "print(f\"Attention weighted image shape: {result.shape}\")"
    ]
   },
   {
@@ -311,9 +371,9 @@
     "_ = ax2.imshow(result)\n",
     "\n",
     "probs = torch.nn.Softmax(dim=-1)(logits)\n",
-    "top5 = torch.argsort(probs, dim=-1, descending=True)\n",
+    "top10 = torch.argsort(probs, dim=-1, descending=True)\n",
     "print(\"Prediction Label and Attention Map!\\n\")\n",
-    "for idx in top5[0, :10]:\n",
+    "for idx in top10[0, :10]:\n",
     "    print(f'{probs[0, idx.item()]:.5f} : {classes[idx.item()]}\\n', end='')"
    ]
   },
