--- a/visualize_atteniton_map.ipynb
+++ b/visualize_atteniton_map.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load required packages"
+    "### Load required packages"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set hyperparameter"
+    "### Set hyperparameter"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set CIFAR-10 classes"
+    "### Set CIFAR-10 classes"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get image and label"
+    "### Get image and label"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show image and label"
+    "### Show image and label"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare Vision Transformer model"
+    "### Prepare Vision Transformer model"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pass image through ViT model\n",
+    "### Pass image through ViT model\n",
     "\n",
     "Here’s a line-by-line breakdown of this code snippet, which visualizes attention maps for a Vision Transformer (ViT) model:\n",
     "\n",
