update attention_map_image folder path

--- a/visualize_atteniton_map.ipynb
+++ b/visualize_atteniton_map.ipynb
@@ -583,8 +583,8 @@
     "    frames.append(Image.open(buf))\n",
     "\n",
     "# Save the frames as a GIF\n",
-    "os.makedirs('attention_data', exist_ok=True)\n",
-    "frames[0].save(f'attention_data/cifar-index-{args.index}.gif', save_all=True, append_images=frames[1:], duration=500, loop=0)"
+    "os.makedirs('attention_map_image', exist_ok=True)\n",
+    "frames[0].save(f'attention_map_image/cifar-index-{args.index}.gif', save_all=True, append_images=frames[1:], duration=500, loop=0)"
    ]
   },
   {
@@ -605,7 +605,7 @@
    ],
    "source": [
     "# Display the GIF inline\n",
-    "with open(f'attention_data/cifar-index-{args.index}.gif', 'rb') as f:\n",
+    "with open(f'attention_map_image/cifar-index-{args.index}.gif', 'rb') as f:\n",
     "    display(IPImage(data=f.read(), format='png'))"
    ]
   }
